--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ img {
 }
 
 /* newsfeed */
-.newsfeed, .roster {
+.newsfeed, .roster, .news {
     padding: 50px 0;
     margin-bottom: 30px;
 }
@@ -98,7 +98,7 @@ img {
 
 }
 
-.newsfeed .newsfeed-grid, .roster .roster-grid {
+.newsfeed .newsfeed-grid, .roster .roster-grid, .news .news.grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
@@ -199,7 +199,7 @@ img {
 
 
 
-.newsfeed .card, .roster .card {
+.newsfeed .card, .roster .card, .news .card {
     background: #f4f4f6;
     color: #000;
     border-radius: 10px;
